--- a/index.html
+++ b/index.html
@@ -5,8 +5,22 @@
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>Thisa is a paragraph.</p>
+<h1><h1 style="background-color:LightGray;">About JIYONG AN
+    
+  
+<p><h3>This website is created to introduce Jiyong An.<h3> </br>
+    <!DOCTYPE html>
+    <html>
+    <body>    
+<img src="JiyongPicture.jpg" alt="Mountain View" width="400" height="500">
+     <h3 style="background-color:Orange;"><i>"Hi. My name is Jiyong!"<i></h3>
+    </br> Date of Birth :  06/18/1994
+    </br> Nationality : Republic of Korea
+    </br> Major : Accounting / Minor : Computer Science           
+    </br> <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    </body>
+    </html>
+</p>z
 
 </body>
 </html>
