--- a/index.html
+++ b/index.html
@@ -12,12 +12,20 @@
     <!DOCTYPE html>
     <html>
     <body>    
-<img src="JiyongPicture.jpg" alt="Mountain View" width="400" height="500">
+<img src="JiyongPicture.jpg" alt="pic" width="400" height="500">
      <h3 style="background-color:Orange;"><i>"Hi. My name is Jiyong!"<i></h3>
     </br> Date of Birth :  06/18/1994
     </br> Nationality : Republic of Korea
-    </br> Major : Accounting / Minor : Computer Science           
-    </br> <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    </br> Major : Accounting / Minor : Computer Science     
+    <p>
+<img src="Ocean.jpg" alt="ocean" width="380" height="500">
+</br> I like to travel around the world!
+    <style> 
+        body {
+            background-image: url("backgroundimg.jpeg");
+            background-color: #cccccc;
+        }
+        </style>
     </body>
     </html>
 </p>z
